--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,32 @@
-# This is a basic workflow to help you get started with Actions
+name: class2-react-app
 
-name: CI
+on: [push]
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v2-beta
-      with: 
-        version: 12
+      - name: Setup Node.Js Environment
+        uses: actions/setup-node@v2-beta
+        with:
+          version: 12
+
+      - name: Setup Yarn Environment
+        uses: Borales/actions-yarn@v2.1.0
+        with:
+            # Yarn command
+            cmd: install  # Yarn Install/ npm Install
+      
+      - name: creating build
+        run: sudo yarn build
         
-    - name: GitHub Action for Yarn
-      uses: Borales/actions-yarn@v2.1.0
-      with:
-        # Yarn command
-        cmd: install # npm install/ yarn install
-    
-    - name: Creating build
-      run: yarn build
-    
-    - name: installing surge  
-      run: npm install -g surge
-    
-    - name: deploying on surge
-      run: surge ./build http://react_starter.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      - name: Installing surge
+        run: npm install -global surge
+      
+      - name: Deploying On Surge
+        run: surge ./build http://react_starter.surge.sh/--token ${{secrets.SURGE_TOKEN}}
